# fastapi-keycloak-demo

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml
backend/: celery.dockerfile  fastapi.dockerfile
backend/app/: pyproject.toml
backend/app/app/: main.py  worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: admin.py  items.py  login.py  users.py  utils.py
backend/app/app/core/: security.py  settings.py
backend/app/app/crud/: base.py  crud_item.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: item.py
backend/app/app/schemas/: __init__.py  item.py  oidc.py
backend/app/app/utils/: cookie.py  emails.py
keycloak/: .env  README.md  docker-compose.yml  realm-export.json
